fix navlist for overlapping.

--- a/app/sass/layout/_navigation.scss
+++ b/app/sass/layout/_navigation.scss
@@ -62,10 +62,10 @@
     position: fixed;
     // starts at left moving over the entire viewport because of full height & width
     top: 0;
-    left: 0;
+    left: -50%; // hide nav on left side
     z-index: 1500;
     // set to hidden
-    opacity: 0;
+    opacity: 0; // Temp
     width: 0;
     transition: all .8s cubic-bezier(0.68, -0.55, 0.265, 1.55); // easeInOutBack
   }
@@ -120,6 +120,7 @@
   &__checkbox:checked ~ &__nav{
     opacity: 1;
     width: 100%;
+    left: 0;
   }
 
   // NOTE: Icon
